--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-vector-icons/entypo": "^12.0.0",
+    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
@@ -19,7 +20,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0"
