--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-vector-icons/entypo": "^12.0.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -23,7 +22,7 @@
     "react-native-bottom-sheet": "^1.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0"
